Updated Mystical Agriculture.
Updated Pick Up Notifier [Forge & Fabric].
Updated Placebo.
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.

Added to Alpha questline (quests about villager trades, name tag).
Updated Beta questline.
Updated Epsilon questline.
Created custom gateways for progression (https://legacy.curseforge.com/minecraft/data-packs/infinite-horizons-2-gateways).
Removed oak saplings and saddle from village weaponsmith loot table.

1.21.1-1.2b-Beta
Updated Sophisticated Core.
Updated Sophisticated Storage.

Fixed hammers script.
Given Iron Hammer, Diamond Hammer, and Netherite Hammer (latter two NYI) the ability of the stone hammer.

1.21.1-1.3-Beta
Updated to NeoForge version 21.1.144.

Added ModernFix.

Updated Apothic Attributes (AttributesLib).
Updated Applied Energistics 2.
Updated Balm.
Updated Collective.
Updated Create Sifting.
Updated FTB Quests (Forge).
Updated Gateways to Eternity.
Updated Jade 🔍.
Updated Just Enough Resources (JER).
Updated Moonlight Lib.
Updated Placebo.
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.
Updated Village Spawn Point.
Updated Waystones.

Edited Alpha Questline into Alpha Chapter Group (with Vanilla and Pam's Harvestcraft questlines).
Started Pam's Harvestcraft Questline (In Alpha).

1.21.1-1.4-Beta
Added Mechanicals Lib.

Updated Almost Unified.
Updated Applied Energistics 2.
Updated Balm.
Updated Cobblegen Galore.
Updated Create Sifting.
Updated Cucumber Library.
Updated FTB Library (Forge).
Updated Generator Galore.
Updated GuideME.
Updated JourneyMap.
Updated Just Enough Resources (JER).
Updated Mystical Agradditions.
Updated Mystical Agriculture.
Updated Puzzles Lib [Forge & Fabric].
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.

Added quests for blaze burner and brass.
Added the ability to obtain a blaze burner by left clicking a nether portal with an empty one.